# Conquer-GTK

./: README.md  io.github.jcwasmx86.Conquer.json  meson.build
data/: io.github.jcwasmx86.Conquer.appdata.xml.in  io.github.jcwasmx86.Conquer.desktop.in  io.github.jcwasmx86.Conquer.gschema.xml  meson.build
data/icons/: meson.build
data/resources/: claninfo.ui  conquer.gresource.xml  conquerscreen.ui  diagram.ui  init_db.sql  mainscreen.ui  map.ui  meson.build  newselectionscreen.ui  restorescreen.ui  statistics.ui  style.css  window.ui
doc/: Configuration.md  FindingScenarios.md  Lifecycle.md  SavingGameState.md  TODO.md  lifecycle.gaphor
po/: POTFILES  conquer.pot  de.po  meson.build
scenarios/: meson.build
scenarios/Belenos/: cities.json  map.json  meson.build  metadata.json  players.json
scenarios/Etiona/: cities.json  map.json  meson.build  metadata.json  players.json
scenarios/Freedo/: cities.json  map.json  meson.build  metadata.json  players.json
src/: application.vala  cityactions.ui  cityactions.vala  cityinfo.ui  cityinfo.vala  claninfo.ui  claninfo.vala  config.vala  conquer.gresource.xml  conquerscreen.ui  databaselistener.vala  diagram.vala  main.vala  mainscreen.vala  map.ui  map.vala  meson.build  newselectionscreen.vala  restorescreen.vala  screen.vala  shared.vala  statistics.vala  window.ui  window.vala
src/model/: city.vala  citygraph.vala  clan.vala  config.vala  configloader.vala  context.vala  gamestate.vala  messagequeue.vala  resource.vala  saver.vala  scenario.vala  scenarioloader.vala
src/model/default/: meson.build
src/model/default/defaultalgorithms/: defaultalgorithms.plugin  defaultalgorithms.vala  meson.build  nullalgorithm.vala
src/model/default/defaultloader/: defaultloader.plugin  defaultloader.vala  defaultscenario.vala  meson.build
src/model/default/defaultmusic/: defaultmusic.plugin  defaultmusic.vala  meson.build
src/model/default/defaultsaver/: defaultsaver.plugin  defaultsaver.vala  meson.build
src/model/default/defensivealgorithm/: defensivealgorithm.plugin  defensivealgorithm.vala  meson.build
src/model/default/devel/: meson.build
src/model/default/devel/errorloader/: errorloader.plugin  errorloader.vala  meson.build
src/model/default/devel/errorloadingscenario/: errorloadingscenario.plugin  errorloadingscenario.vala  meson.build
src/model/default/devel/errorsavelister/: errorsavelister.plugin  errorsavelister.vala  meson.build
src/model/default/devel/errorsaver/: errorsaver.plugin  errorsaver.vala  meson.build
src/model/default/growthlimiter/: growthlimiter.plugin  growthlimiter.vala  meson.build
src/model/default/nullalgorithm/: defaultalgorithms.vala  meson.build  nullalgorithm.plugin  nullalgorithm.vala
src/model/default/offensivealgorithm/: meson.build  offensivealgorithm.plugin  offensivealgorithm.vala
src/model/message/: attackmessage.vala  configloadedmessage.vala  configurationupdatedmessage.vala  endgamemessage.vala  initmessage.vala  message.vala  movemessage.vala  newroundmessage.vala  startgamemessage.vala
src/test/: savetest.vala  speedtest.vala  test.vala
