scenario_install_dir = get_option('prefix') / 'share/conquer/scenarios'
message('Scenario dir @0@'.format(scenario_install_dir))
zip = find_program('zip')
json_glib_format = find_program('json-glib-format')
json_files = [
    'map.json',
    'metadata.json',
    'players.json',
    'cities.json',
]
subdir('Belenos')
subdir('Etiona')
subdir('Freedo')